# 3.5-inch-touch-mawaqeet

./: README.md  platformio.ini
src/: main.cpp
src/Task/: tasks.cpp  tasks.h
src/eeprom/: eep.cpp  eep.h
src/lvgl/: lvgl_ui.cpp  lvgl_ui.h
src/relay/: relay_control.cpp  relay_control.h
src/rtc/: rtc_handler.cpp  rtc_handler.h
src/rtos/: rtos.cpp  rtos.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_maincontentcontainer.c  ui_comp_maincontentcontainer.h  ui_events.cpp  ui_events.h  ui_font_NotoSans10.c  ui_font_NotoSans12.c  ui_font_NotoSans14.c  ui_font_NotoSans18.c  ui_font_NotoSans20.c  ui_font_NotoSans24.c  ui_img_1308353594.c  ui_img_1867271658.c  ui_img_650607941.c  ui_img_help_png.c  ui_img_mosuqe_png.c  ui_img_nowifi_png.c  ui_img_wifi_png.c
src/ui_shortage/: ui_shorage.cpp  ui_shortage.h
src/wifi/: wifi_handler.cpp  wifi_handler.h
